[package]
name = "sitegen"
version = "0.1.0"
edition = "2018"
description = "Simple rusty static site generator"
license = "MIT"

[dependencies]
fs_extra = "1.2.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
simplelog = "0.10.2"
walkdir = "2.3.2"

[features]
