[package]
name = "sitegen"
version = "0.1.2"
edition = "2021"
description = "Simple rusty static site generator"
license = "MIT"

[dependencies]
color-eyre = "0.5.11"
fs_extra = "1.2.0"
glob = "0.3.0"
log = "0.4.14"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
simplelog = "0.10.2"
titlecase = "1.1.0"
walkdir = "2.3.2"

[features]
